[gd_scene load_steps=3 format=2]

[ext_resource path="res://res/Piedra-Regular-MainMenu.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/GameOver.gd" type="Script" id=2]

[node name="GameOver" type="Node2D"]
script = ExtResource( 2 )

[node name="Stars" type="CPUParticles2D" parent="."]
position = Vector2( 640, 360 )
z_index = -1
amount = 100
lifetime = 4.0
preprocess = 1.0
speed_scale = 0.2
randomness = 1.0
lifetime_randomness = 1.0
fixed_fps = 30
emission_shape = 2
emission_rect_extents = Vector2( 640, 360 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 1.0
scale_amount = 2.0
color = Color( 0.968627, 0.917647, 0.505882, 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="ButtonsCenter" type="Node2D" parent="."]
position = Vector2( 640, 360 )

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsCenter"]
margin_left = -50.0
margin_top = -74.0
margin_right = 50.0
margin_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 0 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="ButtonsCenter/VBoxContainer"]
margin_right = 500.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "Your Score : 0"
align = 1
valign = 1

[node name="RetryButton" type="Button" parent="ButtonsCenter/VBoxContainer"]
margin_top = 70.0
margin_right = 500.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 1 )
text = "Retry"

[node name="ExitButton" type="Button" parent="ButtonsCenter/VBoxContainer"]
margin_top = 146.0
margin_right = 500.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
[connection signal="button_up" from="ButtonsCenter/VBoxContainer/RetryButton" to="." method="_on_RetryButton_button_up"]
[connection signal="button_up" from="ButtonsCenter/VBoxContainer/ExitButton" to="." method="_on_ExitButton_button_up"]
